--- a/ProductsCommand/build.gradle
+++ b/ProductsCommand/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	implementation 'com.google.code.gson:gson:2.7'
 }
 
 dependencyManagement {
