Product service and Elastic search implemented.

--- a/ProductsQuery/src/main/resources/application.properties
+++ b/ProductsQuery/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+server.port = 5200
+spring.application.name = product-query-app
 
+# Database connection
+spring.elasticsearch.username=elastic
+spring.elasticsearch.password=feeham
